js/js.translator/testData/incremental/invalidation/crossModuleObjectInitialization/main/m.kt
fun box(stepId: Int, isWasm: Boolean): String {
    return if (X.result == stepId.toString()) "OK" else "FAIL Expected ${stepId.toString()} actual ${X.result}"
}
